--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Open, explore, and showcase holographic-ready .dcard files with Inspire's immersive 3D card viewer."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content=".dcard File Format Card Viewer | Inspire" />
+    <meta
+      property="og:description"
+      content="Launch the immersive .dcard card viewer to preview front and back artwork, tweak lighting, and share your creations."
+    />
+    <meta property="og:image" content="./dcard-viewer-title-image.png" />
+    <meta property="og:image:alt" content="Preview of the Inspire .dcard card viewer experience" />
+    <meta property="og:url" content="https://dcard.digital/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content=".dcard File Format Card Viewer | Inspire" />
+    <meta
+      name="twitter:description"
+      content="Experience Inspire's .dcard viewer to upload art, preview holographic finishes, and curate your collection."
+    />
+    <meta name="twitter:image" content="./dcard-viewer-title-image.png" />
+    <meta name="twitter:image:alt" content="Preview of the Inspire .dcard card viewer experience" />
+    <link rel="image_src" href="./dcard-viewer-title-image.png" />
     <title>.dcard File Format Card Viewer | Inspire</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
