Improve mobile zoom and import guidance

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
         <canvas id="c"></canvas>
 
         <div class="hint">
-          <div><b>Drag</b> to rotate</div>
-          <div><b>Scroll</b> to zoom</div>
-          <div><b>Double-click</b> to reset</div>
+          <div><b>Drag</b> to rotate (touch or mouse)</div>
+          <div><b>Scroll / Pinch</b> to zoom</div>
+          <div><b>Double-click / double-tap</b> to reset</div>
           <div class="tiny">Tip: Upload your front/back images to start.</div>
         </div>
 
@@ -243,15 +243,15 @@
 
             <div class="picker-divider"></div>
 
-            <div class="picker-title">Import / Export .dcard</div>
-            <div class="picker-sub">Load a saved DCard package or export your currently loaded images to share.</div>
+          <div class="picker-title">Import / Export .dcard</div>
+          <div class="picker-sub">Load a saved DCard package or export your currently loaded images to share.</div>
 
-            <div class="picker-actions">
-              <button id="btnImportDcard" class="btn" type="button">Import .dcard</button>
+          <div class="picker-actions">
+              <button id="btnImportDcard" class="btn" type="button">Import .dcard / .zip</button>
               <button id="btnExportDcard" class="btn" type="button">Export .dcard</button>
-            </div>
           </div>
         </div>
+      </div>
       </main>
 
       <footer class="footer">
