Handle binder quota and clamp audio volume

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta name="twitter:image" content="./dcard-viewer-title-image.png" />
     <meta name="twitter:image:alt" content="Preview of the Inspire .dcard card viewer experience" />
     <link rel="image_src" href="./dcard-viewer-title-image.png" />
+    <link rel="icon" type="image/png" href="./inspire.png" />
     <title>.dcard File Format Card Viewer | Inspire</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
